--- a/src/index.css
+++ b/src/index.css
@@ -1,6 +1,12 @@
+:root {
+  --blue: rgb(10, 10, 240);
+  --purple: rgb(225,0, 120);
+  --white: rgb(255, 254, 254);
+}
+
 body {
   margin: 10px;
-  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
+  font-family: 'Albert Sans', -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
     'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
     sans-serif;
   -webkit-font-smoothing: antialiased;
